# AutoIssueReviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  python.yml
auto_issue/: __init__.py  cli.py  config.py  constants.py  fetcher.py  issue_creator.py  reviewer.py  utils.py
autoissue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_fetcher.py  test_issue_creator.py  test_reviewer.py  test_utils.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.test.tsx  App.tsx  index.css
web/src/components/: AIConfigModal.tsx  CLIModal.tsx  Header.tsx  HealthScore.tsx  IssueList.tsx  RepoInfo.tsx  RepoInput.tsx  ReviewProgress.tsx  ReviewResult.tsx
web/src/data/: sampleData.ts
web/src/types/: index.ts
web/src/utils/: ai.test.ts  ai.ts  github.test.ts  github.ts  markdown.test.ts  markdown.ts
