[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoissue"
version = "1.0.0"
description = "AI 驱动的 GitHub 代码审查 CLI 工具，自动审查仓库代码并提交 Issue"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["code-review", "github", "ai", "cli", "openai"]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[project.scripts]
autoissue = "auto_issue.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_issue*"]
